fix(1_19_R2): Fix player re-add packet
[SkinsRestorerX commit](https://github.com/SkinsRestorer/SkinsRestorerX/commit/e09e5369adc8c58735f9326a728ef21b7bda1c2d)